--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.0",
     "react-native-safe-area-context": "^4.3.1",
